Revert "Fixing issue with extra bootstrap whitespace margin" This creates different centering and margin issues
This reverts commit 62ec778d08ca8ccea6934d167a94c71a20e548c5.

--- a/site/source/scss/styles.scss
+++ b/site/source/scss/styles.scss
@@ -84,13 +84,3 @@ hr{
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
 
-/* issue with bootstrap creating whitespace
-on the right side of rows*/
-html, body, div{
-  margin: 0 !important;
-  padding: 0 !important;
-  width: 100%;
-}
-html, body {
-  overflow-x: hidden;
-}
